# sideroxylon

./: .dir-locals.el  .editorconfig  .envrc  .gitignore  CHANGELOG.md  Dockerfile  README.md  default.nix  flake.nix  main.py  pylock.toml  pyproject.toml  shell.nix
.github/workflows/: release.yml
src/sideroxylon/: __main__.py  cli.py  sideroxylon.py  sideroxylon_cli.py  sideroxylon_datasets.py  sideroxylon_forge.py  sideroxylon_github.py  sideroxylon_main.py  sideroxylon_sourcehut.py  sideroxylon_unknown_forge.py  sideroxylon_xdg.py
src/tests/: Python.txt  test_functions.py  test_sideroxylon.py  test_sideroxylon_github.py  test_url_file.org
tests/: test_sideroxylon.py  test_sideroxylon_github.py  test_sideroxylon_main.py
