[project]
name = "sideroxylon"
version = "0.2.0"
description = "A repository classifier."
readme = "README.md"
requires-python = ">=3.14"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
authors = [
  { name = "Geralld Borbón", email = "eternalmangocean@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Shells",
  "Topic :: Utilities"
]
dependencies = [
  "requests>=2.33.0",
  "typer>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/bormoge/sideroxylon"
Issues = "https://github.com/bormoge/sideroxylon/issues"

[project.scripts]
sideroxylon = "sideroxylon.cli:app"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "rassumfrassum>=0.3.3",
  "twine>=6.2.0",
]

[build-system]
requires = ["uv_build >= 0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = ["tests/**"]
wheel-exclude = ["tests/**"]
