[project]
name = "sideroxylon"
version = "0.2.3"
description = "A repository classifier."
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
authors = [
  { name = "Geralld Borbón", email = "eternalmangocean@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Shells",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/bormoge/sideroxylon"
Issues = "https://github.com/bormoge/sideroxylon/issues"

[project.scripts]
sideroxylon = "sideroxylon.sideroxylon_cli:main"

[dependency-groups]
dev = [
  "coverage>=7.13.5",
  "pytest>=9.0.2",
  "rassumfrassum>=0.3.3",
  "twine>=6.2.0",
]

[build-system]
requires = ["hatchling >= 1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "flake.*",
    "uv.lock",
    ".editorconfig",
    ".dir-locals.el",
    ".python-version",
    ".gitignore",
    ".envrc",
]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
